feat: route for authentication
POST in (1).0
